# WindForce

./: .gitignore  CMakeLists.txt  README.md  belief_propagation.cpp  bp.cpp  generate_data.cpp  inverse_ising.cpp
cmake/: FindLIBDAI.cmake
src/: CMakeLists.txt  dynamic_inverse_ising.cpp  dynamic_inverse_ising.hpp  evidence.cpp  evidence.hpp
