CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
PROJECT (BP)

include_directories ("${PROJECT_SOURCE_DIR}/src")
add_subdirectory (src)
set (EXTRA_LIBS ${EXTRA_LIBS} src)

SET (CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake/;${CMAKE_MODULE_PATH}")
ADD_DEFINITIONS("-DNEW_CIMG")
#FIND_PACKAGE(CImg REQUIRED)
#FIND_PACKAGE(GMP REQUIRED)
#FIND_PACKAGE(PythonLibs REQUIRED)
FIND_PACKAGE(Boost COMPONENTS REQUIRED program_options unit_test_framework)

#INCLUDE_DIRECTORIES("${CIMG_INCLUDE_DIRS}")
#INCLUDE_DIRECTORIES ("${GMP_INCLUDE_DIRS}")
INCLUDE_DIRECTORIES ("${Boost_INCLUDE_DIRS}")
#SET (EXTRA_LIBS ${EXTRA_LIBS} ${GMP_LIBRARIES})
#SET(EXTRA_LIBS ${EXTRA_LIBS} ${CIMG_LIBRARIES})

FIND_PACKAGE(GDAL REQUIRED)
include_directories(${GDAL_INCLUDE_DIR})
message(${GDAL_INCLUDE_DIR})
message(${GDAL_LIBRARIES})

FIND_PACKAGE(LIBLBFGS REQUIRED)
include_directories(${LIBLBFGS_INCLUDE_DIR})
message(${LIBLBFGS_INCLUDE_DIR})
message(${LIBLBFGS_LIBRARIES})

ADD_EXECUTABLE(GD generate_data.cpp)
ADD_EXECUTABLE(BP belief_propagation.cpp)
ADD_EXECUTABLE(II inverse_ising.cpp)
TARGET_LINK_LIBRARIES(GD /usr/local/lib/libdai.so)
TARGET_LINK_LIBRARIES(GD ${EXTRA_LIBS})
target_link_libraries (GD ${GDAL_LIBRARIES})

TARGET_LINK_LIBRARIES(BP /usr/local/lib/libdai.so)
TARGET_LINK_LIBRARIES(BP ${EXTRA_LIBS})
target_link_libraries (BP ${GDAL_LIBRARIES})

target_link_libraries (II ${LIBLBFGS_LIBRARIES})
TARGET_LINK_LIBRARIES(II ${EXTRA_LIBS})
target_link_libraries (II ${GDAL_LIBRARIES})
